@@ -1,5 +1,7 @@
  07/15/2002 Al Riddoch <alriddoch@zepler.org>,
+            Malcolm Walker <malcolm@worldforge.org>
     - skstream.cpp: Handle nonblocking connect in win32
+		- fix call in is_ready() for TCP nonblocking connect
     - skstream.h: Include correct streambuf header on Linux.
  07/03/2002 James Turner <james@worldforge.org>
 	-Added configuration case for Darwin / OS-X
